# secp256k1py

./: pyproject.toml
secp256k1py/: secp256k1.py
